# W2-CPP

./: Homework.rar
Grading/: Grading.h
Homework/: explaination_of_hw3.md  hw1.cpp  hw13.cpp  hw14.cpp  hw2.cpp  hw2e.cpp  n_pascal.cpp
Samples/: CMakeLists.txt  Performance.cpp  Performance2.cpp  pascal.cpp  pascal_old_fashioned.cpp
